# goats

./: .gitignore  .lefthook.yml  Cargo.toml  README.md  eslint.config.ts  mise.toml  package.json  rust-toolchain.toml  tsconfig.json
.config/: .cspell.json  .markdownlint-cli2.jsonc  tasks.md.toml  tasks.rs.toml
.github/workflows/: renovate.yaml
docs/contributors/: techstrategy.md  vision.md
docs/contributors/decisions/: adr-0001-rust-for-code-generation-cli.md  adr-0002-annotations-for-serialization-schema.md
src/cli/: Cargo.toml
src/lib/: .gitignore  Cargo.toml
src/lib/src/: golang.rs  lib.rs
src/lib/tests/: go2ts_test.rs
src/lib/tests/testdata/: in_simple.go  want_simple.d.ts
